<resources>
    <string name="title_screen">Browse Songs</string>
    <string name="artist">Artist Name</string>
    <string name="album">Album Name</string>
    <string name="song_title">Song Title Here</string>
    <string name="browse">Browse</string>
    <string name="now_playing">Now Playing</string>
    <string name="queue">Queue</string>

    <string-array name="sort_menu">
        <item>Album</item>
        <item>Artist</item>
        <item>Title</item>
        <item>Shuffle</item>
    </string-array>

</resources>