<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="8dp"
            android:id="@+id/album_cover"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/song_title_style"
            android:layout_toRightOf="@id/album_cover"
            android:layout_alignTop="@id/album_cover"
            tools:text="@string/song_title" />

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/song_title"
            style="@style/song_information_style"
            android:layout_toRightOf="@id/album_cover"
            tools:text="@string/artist" />

        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/song_artist"
            style="@style/song_information_style"
            android:layout_toRightOf="@id/album_cover"
            tools:text="@string/album" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>