<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp">

        <TextView
            android:id="@+id/browse_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/btn_dialog"
            android:gravity="center"
            tools:text="@string/browse" />

        <TextView
            android:id="@+id/now_playing_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@id/browse_button"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/btn_dialog"
            android:gravity="center"
            tools:text="@string/now_playing" />

        <TextView
            android:id="@+id/queue_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@id/now_playing_button"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/btn_dialog"
            android:gravity="center"
            tools:text="@string/queue" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>